--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "face-api.js": "^0.22.2",
@@ -24,7 +22,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.2",
-    "gh-pages": "^6.3.0",
     "vite": "^5.0.0"
   }
 }
