--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^16.2.4",
+    "react-router-dom": "^7.10.1",
     "three": "^0.163.0"
   },
   "devDependencies": {
